--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
     "axios": "^0.27.2",
-    "i": "^0.3.7"
+    "i": "^0.3.7",
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "build" : "tsc",
+    "start": "nodemon build/deputados.js"
   }
+
 }
